// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Elements renders as <p> if no "as" prop provided 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 1rem;
  line-height: 1.5rem;
}

<p
  className="c0"
  color="bulma.100"
  size={16}
>
  Text
</p>
`;

exports[`Text Elements renders as an element if "as" prop provided 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 1rem;
  line-height: 1.5rem;
}

<span
  className="c0"
  color="bulma.100"
  size={16}
>
  Text
</span>
`;

exports[`Text Sizes 10rem size renders properly 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 0.625rem;
  line-height: 1rem;
}

<p
  className="c0"
  color="bulma.100"
  size={10}
>
  Text
</p>
`;

exports[`Text Sizes 12rem size renders properly 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 0.75rem;
  line-height: 1rem;
}

<p
  className="c0"
  color="bulma.100"
  size={12}
>
  Text
</p>
`;

exports[`Text Sizes 14rem size renders properly 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 0.875rem;
  line-height: 1.25rem;
}

<p
  className="c0"
  color="bulma.100"
  size={14}
>
  Text
</p>
`;

exports[`Text Sizes 16rem size renders properly 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 1rem;
  line-height: 1.5rem;
}

<p
  className="c0"
  color="bulma.100"
  size={16}
>
  Text
</p>
`;

exports[`Text Sizes 18rem size renders properly 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 1.125rem;
  line-height: 1.75rem;
}

<p
  className="c0"
  color="bulma.100"
  size={18}
>
  Text
</p>
`;

exports[`Text Sizes 20rem size renders properly 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 1.25rem;
  line-height: 1.75rem;
}

<p
  className="c0"
  color="bulma.100"
  size={20}
>
  Text
</p>
`;

exports[`Text Sizes 24rem size renders properly 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 1.5rem;
  line-height: 2rem;
}

<p
  className="c0"
  color="bulma.100"
  size={24}
>
  Text
</p>
`;

exports[`Text Sizes 32rem size renders properly 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 2rem;
  line-height: 2.5rem;
}

<p
  className="c0"
  color="bulma.100"
  size={32}
>
  Text
</p>
`;

exports[`Text Sizes 48rem size renders properly 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 3rem;
  line-height: 3.5rem;
}

<p
  className="c0"
  color="bulma.100"
  size={48}
>
  Text
</p>
`;

exports[`Text Sizes 56rem size renders properly 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 3.5rem;
  line-height: 4rem;
}

<p
  className="c0"
  color="bulma.100"
  size={56}
>
  Text
</p>
`;

exports[`Text Sizes 64rem size renders properly 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 4rem;
  line-height: 4.5rem;
}

<p
  className="c0"
  color="bulma.100"
  size={64}
>
  Text
</p>
`;

exports[`Text Sizes 72rem size renders properly 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 4.5rem;
  line-height: 4.75rem;
}

<p
  className="c0"
  color="bulma.100"
  size={72}
>
  Text
</p>
`;

exports[`Text Sizes Boldness renders default boldness 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 1rem;
  line-height: 1.5rem;
}

<p
  className="c0"
  color="bulma.100"
  size={16}
>
  Text
</p>
`;

exports[`Text Sizes Boldness renders with semibold font weight 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 500;
}

<p
  className="c0"
  color="bulma.100"
  size={16}
>
  Text
</p>
`;

exports[`Text Sizes Colors renders default color 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 1rem;
  line-height: 1.5rem;
}

<p
  className="c0"
  color="bulma.100"
  size={16}
>
  Text
</p>
`;

exports[`Text Sizes Colors renders with a color 1`] = `
.c0 {
  color: #0CCF61;
  font-size: 1rem;
  line-height: 1.5rem;
}

<p
  className="c0"
  color="piccolo.100"
  size={16}
>
  Text
</p>
`;

exports[`Text Sizes renders default font size 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 1rem;
  line-height: 1.5rem;
}

<p
  className="c0"
  color="bulma.100"
  size={16}
>
  Text
</p>
`;
